--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="str_AddItem">Add Item</string>
     <string name="str_editItem">Edit Item Below</string>
     <string name="str_Save">Save</string>
+    <string name="todo_str">To Do Name</string>
 </resources>
